--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,47 @@ pytz==2016.10
 structlog==16.1.0
 termcolor==1.1.0
 WTForms==2.1
+asn1crypto==0.23.0
+bcrypt==3.1.3
+beautifulsoup4==4.6.0
+blinker==1.4
+bs4==0.0.1
+certifi==2017.7.27.1
+cffi==1.11.1
+chardet==3.0.4
+cryptography==2.0.3
+enum-compat==0.0.2
+eventlet==0.21.0
+Flask==0.10.1
+Flask-Admin==1.3.0
+Flask-Bcrypt==0.7.1
+Flask-DebugToolbar==0.10.0
+Flask-Jsonpify==1.5.0
+Flask-Login==0.3.2
+Flask-Mail==0.9.1
+Flask-Script==2.0.5
+Flask-SocketIO==2.9.2
+Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
+greenlet==0.4.12
+gunicorn==19.4.5
+idna==2.6
+itsdangerous==0.24
+Jinja2==2.9.6
+MarkupSafe==1.0
+ndg-httpsclient==0.4.3
+pusher==1.7.2
+pyasn1==0.3.7
+pycparser==2.18
+pyOpenSSL==17.3.0
+python-engineio==1.7.0
+python-socketio==1.8.1
+pytz==2016.10
+requests==2.18.4
+six==1.11.0
+SQLAlchemy==1.1.14
+structlog==16.1.0
+termcolor==1.1.0
+urllib3==1.22
+Werkzeug==0.12.2
+WTForms==2.1
